--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar color="primary">
   <span>
     <a routerLink="/">
-      Angular Js
-    <p>iJavaScript</p></a>
+     My First Assignment
+    <p>Angular + Javascript</p></a>
   </span>
   <span class="spacer"></span>
   <ul>
